Update tennis icon from table-tennis to tennis-ball

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <span>Varsity Soccer</span>
                         </div>
                         <div class="highlight-item">
-                            <i class="fas fa-table-tennis"></i>
+                            <i class="fas fa-tennis-ball"></i>
                             <span>Tennis Player</span>
                         </div>
                         <div class="highlight-item">
