chore(assets): SEO-friendly image renames and alt text updates; updated references in HTML and sitemap; kept layout unchanged

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kerellos.com/">
     <meta property="og:site_name" content="Kerellos Abdelmalak - Personal Portfolio">
-    <meta property="og:image" content="https://kerellos.com/images/profile/Headshot.png">
+    <meta property="og:image" content="https://kerellos.com/images/profile/kerellos-headshot-2025.png">
     <meta property="og:image:alt" content="Kerellos Abdelmalak - High School Senior and NASA ADC Finalist">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -40,14 +40,14 @@
     <meta name="twitter:title" content="Kerellos Abdelmalak - NASA App Developer Challenge Finalist">
     <meta name="twitter:description"
         content="High school senior finalist in NASA's App Developer Challenge. Innovative engineer creating space education apps and soccer tracking devices.">
-    <meta name="twitter:image" content="https://kerellos.com/images/profile/Headshot.png">
+    <meta name="twitter:image" content="https://kerellos.com/images/profile/kerellos-headshot-2025.png">
     <meta name="twitter:image:alt" content="Kerellos Abdelmalak - High School Senior and NASA ADC Finalist">
 
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="images/Favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/Favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/Favicon.png">
-    <link rel="mask-icon" href="images/Favicon.png" color="#7D2BE8">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/kerellos-favicon-2025.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/kerellos-favicon-2025.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/kerellos-favicon-2025.png">
+    <link rel="mask-icon" href="images/kerellos-favicon-2025.png" color="#7D2BE8">
     <meta name="theme-color" content="#7D2BE8">
     <meta name="msapplication-TileColor" content="#7D2BE8">
 
@@ -80,7 +80,7 @@
                 "url": "https://kerellos.com/",
                 "image": {
                     "@type": "ImageObject",
-                    "url": "https://kerellos.com/images/profile/Headshot.png",
+                    "url": "https://kerellos.com/images/profile/kerellos-headshot-2025.png",
                     "width": 400,
                     "height": 400,
                     "caption": "Kerellos Abdelmalak - High School Senior and NASA ADC Finalist"
@@ -213,7 +213,7 @@
                 "@id": "https://kerellos.com/#organization",
                 "name": "Kerellos Abdelmalak Portfolio",
                 "url": "https://kerellos.com/",
-                "logo": "https://kerellos.com/images/Favicon.png",
+                "logo": "https://kerellos.com/images/kerellos-favicon-2025.png",
                 "description": "Personal portfolio and project showcase of Kerellos Abdelmalak",
                 "founder": {
                     "@id": "https://kerellos.com/#person"
@@ -302,7 +302,7 @@
             </div>
             <div class="hero-visual">
                 <div class="hero-avatar">
-                    <img src="images/profile/Headshot.png"
+                    <img src="images/profile/kerellos-headshot-2025.png"
                         alt="Kerellos Abdelmalak - High School Senior and NASA ADC Finalist" class="hero-profile-image">
                 </div>
             </div>
@@ -343,7 +343,8 @@
                             <span>Varsity Soccer</span>
                         </div>
                         <div class="highlight-item">
-                            <img src="images/icons/tennis-ball.svg" alt="Tennis" class="custom-icon tennis-icon">
+                            <img src="images/icons/kerellos-tennis-icon-2025.svg"
+                                alt="Tennis ball icon used for Kerellos hobby" class="custom-icon tennis-icon">
                             <span>Tennis Player</span>
                         </div>
                         <div class="highlight-item">
@@ -353,7 +354,8 @@
                     </div>
                 </article>
                 <div class="about-image">
-                    <img src="images/profile/AboutMe.png" alt="Kerellos Abdelmalak" class="profile-image">
+                    <img src="images/profile/kerellos-about-portrait-2025.png"
+                        alt="Kerellos Abdelmalak portrait playing soccer, natural light" class="profile-image">
                     <!-- Fallback placeholder if image doesn't load -->
                     <div class="image-placeholder" style="display: none;">
                         <i class="fas fa-user-graduate"></i>
@@ -373,9 +375,8 @@
                 <!-- NASA ADC Project -->
                 <article class="project-card" id="nasa-project">
                     <div class="project-image">
-                        <img src="images/projects/NasaProject.png"
-                            alt="NASA App Developer Challenge - Space Education App for Artemis 2"
-                            class="project-image">
+                        <img src="images/projects/kerellos-nasa-adc-app-2024.png"
+                            alt="Kerellos NASA ADC space education app focused on Artemis 2" class="project-image">
                     </div>
                     <div class="project-content">
                         <header>
@@ -584,11 +585,12 @@
             <h2 class="section-title">Media Gallery</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/gallery/Classroom.png" alt="NASA ADC Teaching Session" class="gallery-image">
+                    <img src="images/gallery/kerellos-nasa-adc-classroom-2024.png"
+                        alt="Kerellos teaching NASA ADC coding workshop to students" class="gallery-image">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery/LectureCode.png" alt="Student Outreach - Code Lecture"
-                        class="gallery-image">
+                    <img src="images/gallery/kerellos-nasa-adc-lecture-code-2024.png"
+                        alt="Kerellos giving student outreach code lecture on Artemis" class="gallery-image">
                 </div>
                 <!-- Hidden gallery items - will be shown when images are ready
                 <div class="gallery-item" style="display: none;">
@@ -611,7 +613,8 @@
                 </div>
                 -->
                 <div class="gallery-item">
-                    <img src="images/gallery/NasaPic1.png" alt="NASA Challenge" class="gallery-image">
+                    <img src="images/gallery/kerellos-nasa-adc-challenge-2024.png"
+                        alt="Kerellos NASA ADC challenge gallery photo with team" class="gallery-image">
                 </div>
             </div>
         </div>
