fix: update GitHub username and HTML formatting
- Updated GitHub social link from kirocodes to kiroiscoding (correct username)
- Fixed HTML formatting for NASA media coverage paragraph
- Cleaned up .DS_Store file

--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
                         technology. As a first-generation Egyptian immigrant, I bring a unique perspective to everything
                         I do, combining my heritage with my drive for innovation. My work has been featured in the
                         <strong>Daily Herald</strong> and <strong>Northwest Herald</strong> for my participation in
-                        NASA's App Developer Challenge.</p>
+                        NASA's App Developer Challenge.
+                    </p>
 
                     <p>When I'm not coding or building projects, you can find me on the tennis court or playing varsity
                         soccer. These sports have taught me discipline, teamwork, and the importance of continuous
@@ -761,7 +762,7 @@
                     </div>
 
                     <div class="social-links">
-                        <a href="https://github.com/kirocodes" target="_blank" class="social-link">
+                        <a href="https://github.com/kiroiscoding" target="_blank" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/kerellos-abdelmalak-54a0b8379" target="_blank"
