feat: enhance Google search appearance and favicon visibility
- Improved meta description for more professional Google search results
- Enhanced Open Graph and Twitter descriptions for better social sharing
- Added multiple favicon formats with absolute paths for better Google recognition
- Added shortcut icon and msapplication tags for comprehensive browser support
- More compelling language: 'innovative engineer', 'groundbreaking technology', 'award-winning'
- Should improve both search result appearance and favicon display

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Primary SEO Meta Tags -->
     <title>Kerellos Abdelmalak - NASA App Developer Challenge Finalist | High School Senior Engineer</title>
     <meta name="description"
-        content="Kerellos Abdelmalak: High school senior, NASA App Developer Challenge Finalist featured in Daily Herald and Northwest Herald. Discover his space education apps, soccer tracking devices, and cutting-edge projects. First-generation Egyptian immigrant making waves in tech.">
+        content="Kerellos Abdelmalak - NASA App Developer Challenge Finalist and innovative high school engineer. Featured in Daily Herald and Northwest Herald for groundbreaking space education technology. Explore award-winning projects including Artemis mission apps and IoT soccer analytics.">
     <meta name="keywords"
         content="Kerellos, Kerellos Abdelmalak, Kiro Abdelmalak, NASA App Developer Challenge, high school senior, electrical engineering, coding, Flutter developer, ESP32 projects, Phantom Track, space education, Artemis 2, Egyptian engineer, first generation immigrant, student developer, mobile app developer, PCB designer, 3D printing, soccer analytics, GPS tracking">
     <meta name="author" content="Kerellos Abdelmalak">
@@ -24,7 +24,7 @@
     <meta property="og:title"
         content="Kerellos Abdelmalak - NASA App Developer Challenge Finalist | High School Senior Engineer">
     <meta property="og:description"
-        content="Meet Kerellos Abdelmalak: A high school senior finalist in NASA's App Developer Challenge. Discover his innovative space education apps, soccer tracking devices, and cutting-edge engineering projects.">
+        content="Kerellos Abdelmalak - NASA App Developer Challenge Finalist and innovative high school engineer. Featured in Daily Herald and Northwest Herald for groundbreaking space education technology and award-winning engineering projects.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kerellos.com/">
     <meta property="og:site_name" content="Kerellos Abdelmalak - Personal Portfolio">
@@ -39,17 +39,20 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Kerellos Abdelmalak - NASA App Developer Challenge Finalist">
     <meta name="twitter:description"
-        content="High school senior finalist in NASA's App Developer Challenge. Innovative engineer creating space education apps and soccer tracking devices.">
+        content="NASA App Developer Challenge Finalist and innovative high school engineer. Featured in Daily Herald and Northwest Herald for groundbreaking space education technology.">
     <meta name="twitter:image" content="https://kerellos.com/images/profile/kerellos-headshot-2025.png">
     <meta name="twitter:image:alt" content="Kerellos Abdelmalak - High School Senior and NASA ADC Finalist">
 
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="images/kerellos-favicon-2025.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/kerellos-favicon-2025.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/kerellos-favicon-2025.png">
-    <link rel="mask-icon" href="images/kerellos-favicon-2025.png" color="#7D2BE8">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/kerellos-favicon-2025.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/kerellos-favicon-2025.png">
+    <link rel="icon" type="image/x-icon" href="/images/kerellos-favicon-2025.png">
+    <link rel="shortcut icon" href="/images/kerellos-favicon-2025.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/kerellos-favicon-2025.png">
+    <link rel="mask-icon" href="/images/kerellos-favicon-2025.png" color="#7D2BE8">
     <meta name="theme-color" content="#7D2BE8">
     <meta name="msapplication-TileColor" content="#7D2BE8">
+    <meta name="msapplication-TileImage" content="/images/kerellos-favicon-2025.png">
 
     <!-- Performance and Resource Hints -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
