feat(projects): add Phantom Track project image and KiCad gallery photo; SEO-friendly filenames and descriptive alts

--- a/index.html
+++ b/index.html
@@ -469,7 +469,11 @@
             </div>
 
             <!-- Phantom Track Project -->
-            <article class="project-card phantom-text-only" id="phantom-track">
+            <article class="project-card" id="phantom-track">
+                <div class="project-image">
+                    <img src="images/projects/kerellos-phantom-track-device-2025.jpg"
+                        alt="Kerellos Phantom Track device with ESP32 GPS and MPU6050" class="project-image">
+                </div>
                 <div class="project-content">
                     <header>
                         <h3 class="project-title">Phantom Track</h3>
@@ -742,6 +746,10 @@
                 <div class="gallery-item">
                     <img src="images/gallery/kerellos-nasa-adc-challenge-2024.png"
                         alt="Kerellos NASA ADC challenge gallery photo with team" class="gallery-image">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/gallery/kerellos-kicad-pcb-design-2025.jpg"
+                        alt="Kerellos KiCad PCB design for Phantom Track sensor board" class="gallery-image">
                 </div>
             </div>
         </div>
